@@ -1,3 +1,9 @@
+2005-07-13  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* opt/GS-HalftoningAlgorithm-Gray.xml: Added option for choosing
+	  the halftoning algorithm on BW printers. Much better grayscale
+	  quality with Well-Tempered Screening.
+
 2005-07-12  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* README: Updated link to Adobe PPD specification.
